Upload from actual project-front-template-html

--- a/app/styles/helpers/optimize.scss
+++ b/app/styles/helpers/optimize.scss
@@ -109,7 +109,7 @@ pre {
 
 // Set consistent quote types.
 q {
-	quotes: '\201C', '\201D', '\2018', '\2019';
+	quotes: '«' '»';
 }
 
 // Embedded content
