--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,4 +2,5 @@
 @import 'helpers/mixins';
 @import 'helpers/fonts';
 @import 'helpers/optimize';
+@import 'helpers/nojs';
 @import '../blocks/**/*';
